--- a/UIComponents/ScrollView-Photo/PhotoScroll/Base.lproj/Main.storyboard
+++ b/UIComponents/ScrollView-Photo/PhotoScroll/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                 <size key="customSize" width="200" height="200"/>
                                 <connections>
                                     <outlet property="imageView" destination="1Xv-RL-hti" id="2ul-H5-n5T"/>
-                                    <segue destination="Tou-yP-mjQ" kind="show" id="Wlw-9H-VhR"/>
+                                    <segue destination="zES-hk-dr0" kind="show" identifier="showPhotoPage" id="bRE-o1-3hc"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -69,11 +69,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Tte-qg-mzd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="dBF-SA-UXb">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a2K-zO-uTR">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo1" translatesAutoresizingMaskIntoConstraints="NO" id="Ve5-7J-0me">
                                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
@@ -110,7 +110,117 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RSI-tT-12r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2134" y="485"/>
+            <point key="canvasLocation" x="3750" y="484"/>
+        </scene>
+        <!--Photo Comment View Controller-->
+        <scene sceneID="w3y-gl-9Hg">
+            <objects>
+                <viewController storyboardIdentifier="PhotoCommentViewController" automaticallyAdjustsScrollViewInsets="NO" id="Hbm-Wn-IgH" customClass="PhotoCommentViewController" customModule="PhotoScroll" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="J07-ga-Zgg"/>
+                        <viewControllerLayoutGuide type="bottom" id="aOI-Cu-qoq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eVM-sM-fu2">
+                        <rect key="frame" x="0.0" y="0.0" width="340" height="800"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w7J-lT-0Xh">
+                                <rect key="frame" x="0.0" y="20" width="340" height="780"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kpK-cE-tF4" userLabel="ContainerView">
+                                        <rect key="frame" x="0.0" y="0.0" width="340" height="500"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo1" translatesAutoresizingMaskIntoConstraints="NO" id="0PD-cW-N7V">
+                                                <rect key="frame" x="0.0" y="0.0" width="340" height="300"/>
+                                                <gestureRecognizers/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="qFr-dY-cj6"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="yrh-Lw-MHi" appends="YES" id="xNW-Zs-ik9"/>
+                                                </connections>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What fits me best?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efg-vN-BW5">
+                                                <rect key="frame" x="98" y="300" width="144" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bEN-cO-Jhx">
+                                                <rect key="frame" x="8" y="351" width="324" height="30"/>
+                                                <gestureRecognizers/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                                <connections>
+                                                    <action selector="hideKeyboard:" destination="Hbm-Wn-IgH" eventType="primaryActionTriggered" id="fUG-TE-10L"/>
+                                                </connections>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="0PD-cW-N7V" firstAttribute="leading" secondItem="kpK-cE-tF4" secondAttribute="leading" id="7KU-XQ-3i2"/>
+                                            <constraint firstItem="Efg-vN-BW5" firstAttribute="top" secondItem="0PD-cW-N7V" secondAttribute="bottom" id="HJw-rD-gzW"/>
+                                            <constraint firstAttribute="trailing" secondItem="bEN-cO-Jhx" secondAttribute="trailing" constant="8" id="RXL-0g-kws"/>
+                                            <constraint firstItem="bEN-cO-Jhx" firstAttribute="top" secondItem="Efg-vN-BW5" secondAttribute="bottom" constant="30" id="V1c-cx-kPc"/>
+                                            <constraint firstAttribute="trailing" secondItem="0PD-cW-N7V" secondAttribute="trailing" id="XNB-Ya-FMS"/>
+                                            <constraint firstAttribute="height" constant="500" id="Zqw-lX-PSA"/>
+                                            <constraint firstItem="0PD-cW-N7V" firstAttribute="top" secondItem="kpK-cE-tF4" secondAttribute="top" id="cUF-gI-jZp"/>
+                                            <constraint firstItem="Efg-vN-BW5" firstAttribute="centerX" secondItem="kpK-cE-tF4" secondAttribute="centerX" id="elM-ml-Xvp"/>
+                                            <constraint firstItem="bEN-cO-Jhx" firstAttribute="leading" secondItem="kpK-cE-tF4" secondAttribute="leading" constant="8" id="iqW-1t-o10"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="kpK-cE-tF4" firstAttribute="top" secondItem="w7J-lT-0Xh" secondAttribute="top" id="UZv-nt-gPH"/>
+                                    <constraint firstAttribute="bottom" secondItem="kpK-cE-tF4" secondAttribute="bottom" id="Z1n-N7-Vv1"/>
+                                    <constraint firstItem="kpK-cE-tF4" firstAttribute="leading" secondItem="w7J-lT-0Xh" secondAttribute="leading" id="ete-9j-GzL"/>
+                                    <constraint firstAttribute="trailing" secondItem="kpK-cE-tF4" secondAttribute="trailing" id="o1N-xa-UzQ"/>
+                                    <constraint firstItem="kpK-cE-tF4" firstAttribute="width" secondItem="w7J-lT-0Xh" secondAttribute="width" id="r9s-Qn-ehC"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="aOI-Cu-qoq" firstAttribute="top" secondItem="w7J-lT-0Xh" secondAttribute="bottom" id="9dq-AO-zxN"/>
+                            <constraint firstAttribute="trailing" secondItem="w7J-lT-0Xh" secondAttribute="trailing" id="UW3-P5-xNU"/>
+                            <constraint firstItem="w7J-lT-0Xh" firstAttribute="leading" secondItem="eVM-sM-fu2" secondAttribute="leading" id="ntA-8v-BEp"/>
+                            <constraint firstItem="w7J-lT-0Xh" firstAttribute="top" secondItem="J07-ga-Zgg" secondAttribute="bottom" id="tFe-rO-ucB"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="cM3-pK-lLv" appends="YES" id="np1-O7-FTP"/>
+                        </connections>
+                    </view>
+                    <size key="freeformSize" width="340" height="800"/>
+                    <connections>
+                        <outlet property="imageView" destination="0PD-cW-N7V" id="6vu-bE-bqT"/>
+                        <outlet property="nameTextField" destination="bEN-cO-Jhx" id="nXf-7F-qwi"/>
+                        <outlet property="scrollView" destination="w7J-lT-0Xh" id="IEX-qU-DSX"/>
+                        <segue destination="Tou-yP-mjQ" kind="show" identifier="zooming" id="R5H-Ja-nA9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dN1-Gp-GQ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="cM3-pK-lLv">
+                    <connections>
+                        <action selector="hideKeyboard:" destination="Hbm-Wn-IgH" id="CCH-JU-ccn"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="yrh-Lw-MHi">
+                    <connections>
+                        <action selector="openZoomingController:" destination="Hbm-Wn-IgH" id="ZVM-aO-HJN"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="2962" y="544"/>
+        </scene>
+        <!--Manage Page View Controller-->
+        <scene sceneID="oNG-gz-OTx">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" pageSpacing="8" navigationOrientation="horizontal" spineLocation="none" id="zES-hk-dr0" customClass="ManagePageViewController" customModule="PhotoScroll" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l2T-X6-qEF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2241" y="484"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uzF-pX-Zex">
