Flicker search app added drag drop feature, sharing items, mutiple selection of items

--- a/UIComponents/UICollectionView/FlickrSearch/Base.lproj/Main.storyboard
+++ b/UIComponents/UICollectionView/FlickrSearch/Base.lproj/Main.storyboard
@@ -18,13 +18,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Me1-IW-geQ">
                             <size key="itemSize" width="200" height="200"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="headerReferenceSize" width="50" height="90"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FlickerCell" id="4cE-uc-O30" customClass="FlickerCollectionViewCell" customModule="FlickrSearch" customModuleProvider="target">
-                                <rect key="frame" x="87.5" y="0.0" width="200" height="200"/>
+                                <rect key="frame" x="87.5" y="90" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
@@ -33,19 +33,45 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iP8-h1-by7">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                         </imageView>
+                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aHp-aI-7Nl">
+                                            <rect key="frame" x="81.5" y="81.5" width="37" height="37"/>
+                                        </activityIndicatorView>
                                     </subviews>
                                 </view>
                                 <constraints>
                                     <constraint firstItem="iP8-h1-by7" firstAttribute="leading" secondItem="4cE-uc-O30" secondAttribute="leading" id="Fe2-pz-MYo"/>
                                     <constraint firstAttribute="trailing" secondItem="iP8-h1-by7" secondAttribute="trailing" id="GBi-k7-tE7"/>
+                                    <constraint firstItem="aHp-aI-7Nl" firstAttribute="centerY" secondItem="4cE-uc-O30" secondAttribute="centerY" id="HDk-JQ-FgR"/>
+                                    <constraint firstItem="aHp-aI-7Nl" firstAttribute="centerX" secondItem="4cE-uc-O30" secondAttribute="centerX" id="epl-AD-X8W"/>
                                     <constraint firstItem="iP8-h1-by7" firstAttribute="top" secondItem="4cE-uc-O30" secondAttribute="top" id="gQV-mF-PiV"/>
                                     <constraint firstAttribute="bottom" secondItem="iP8-h1-by7" secondAttribute="bottom" id="uqc-dy-auB"/>
                                 </constraints>
                                 <connections>
+                                    <outlet property="activityIndicator" destination="aHp-aI-7Nl" id="gRS-gO-EZb"/>
                                     <outlet property="imageView" destination="iP8-h1-by7" id="FIt-lh-YKE"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="FlickrPhotoHeaderView" id="4tg-OD-XFC" customClass="FlickerPhotoHeaderView" customModule="FlickrSearch" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qqe-la-HEn">
+                                    <rect key="frame" x="149.5" y="25.5" width="76" height="39"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="Qqe-la-HEn" firstAttribute="centerY" secondItem="4tg-OD-XFC" secondAttribute="centerY" id="lYj-hQ-OwS"/>
+                                <constraint firstItem="Qqe-la-HEn" firstAttribute="centerX" secondItem="4tg-OD-XFC" secondAttribute="centerX" id="zW8-XG-SHJ"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="headerLabel" destination="Qqe-la-HEn" id="g9Z-oP-Ja7"/>
+                            </connections>
+                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="3S9-w4-9GS" id="eac-EX-zzr"/>
                             <outlet property="delegate" destination="3S9-w4-9GS" id="jiZ-Om-LT9"/>
@@ -63,6 +89,11 @@
                                 <outlet property="delegate" destination="3S9-w4-9GS" id="HeC-T3-WEb"/>
                             </connections>
                         </textField>
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="LkV-eN-0Ih">
+                            <connections>
+                                <action selector="share:" destination="3S9-w4-9GS" id="r7S-CG-UUh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BDe-d6-j95" userLabel="First Responder" sceneMemberID="firstResponder"/>
