--- a/UIComponents/ScrollView-Photo/PhotoScroll/Base.lproj/Main.storyboard
+++ b/UIComponents/ScrollView-Photo/PhotoScroll/Base.lproj/Main.storyboard
@@ -69,14 +69,15 @@
                         <viewControllerLayoutGuide type="bottom" id="Tte-qg-mzd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="dBF-SA-UXb">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a2K-zO-uTR">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="748"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo1" translatesAutoresizingMaskIntoConstraints="NO" id="Ve5-7J-0me">
                                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                        <color key="backgroundColor" red="0.062644172459999994" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -94,11 +95,12 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="a2K-zO-uTR" secondAttribute="trailing" id="6NA-2a-oY4"/>
                             <constraint firstItem="a2K-zO-uTR" firstAttribute="top" secondItem="ySi-Sp-ZBB" secondAttribute="bottom" id="ZFU-pR-fWI"/>
-                            <constraint firstItem="Tte-qg-mzd" firstAttribute="top" secondItem="a2K-zO-uTR" secondAttribute="bottom" id="jcL-Sp-FIn"/>
+                            <constraint firstAttribute="bottom" secondItem="a2K-zO-uTR" secondAttribute="bottom" id="rXQ-Mz-ING"/>
                             <constraint firstItem="a2K-zO-uTR" firstAttribute="leading" secondItem="dBF-SA-UXb" secondAttribute="leading" id="uQf-UE-L0M"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
+                    <size key="freeformSize" width="375" height="768"/>
                     <connections>
                         <outlet property="imageView" destination="Ve5-7J-0me" id="iCm-X3-KJI"/>
                         <outlet property="imageViewBottomConstraint" destination="lfS-Kd-dYO" id="L5c-hX-a8i"/>
@@ -180,7 +182,7 @@
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.084393614219999996" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="aOI-Cu-qoq" firstAttribute="top" secondItem="w7J-lT-0Xh" secondAttribute="bottom" id="9dq-AO-zxN"/>
